# maomao

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.test.yml  maomao.example.json  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml
.trae/documents/: plan_20260214_042248.md
docs/: anti-patterns.md  api-design.md  coding-standards.md  distribution-plan.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: config.test.ts  config.ts  index.ts  services.ts  types.test.ts  types.ts
scripts/: quickstart.sh  run_e2e_tests.sh
src/maomao/: __init__.py  cli.py  config.py  dependency_checker.py  embeddings.py  models.py  pipeline.py  state.py  vectorstore.py
src/maomao/chunkers/: __init__.py  base.py  markdown.py  text.py
src/maomao/sources/: __init__.py  base.py  local_doc.py  siyuan.py
tests/: conftest.py  test_chunkers.py  test_config.py  test_e2e.py  test_models.py  test_sources.py
